change input URL to simple String path